# refine-mcp

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_zh-TW.md
.claude/plans/: fact-filtering-2026-03-10.md  refine-v2-structural-analyzer-2026-03-16.md  server-rs-refactor-2026-03-10.md
.claude/skills/: github-publish.md
.github/workflows/: ci.yml
docs/: README_zh-TW.md
docs/plans/: 2026-03-06-refine-v5-blast-radius-schema.md  2026-03-06-refine-v5-impl.md
plans/: agent-first-evolution-2026-05-05.draft.md  agent-first-evolution-2026-05-05.md  quick-review-2026-03-22.md  refine-state-agent-first-evolution-2026-05-05.json  return-path-analysis-2026-03-22.md
plans/archived/: return-path-analysis-2026-03-22.md
src/: diff.rs  fingerprint.rs  health.rs  lib.rs  main.rs  packs.rs  server.rs  state.rs  types.rs
src/dedup/: mod.rs
src/facts/: bash.rs  blade.rs  blast_radius.rs  json_lang.rs  markdown.rs  migration.rs  mod.rs  php.rs  python.rs  registry.rs  rust_lang.rs  sql.rs  textual.rs  toml_lang.rs  types.rs  typescript.rs  vue.rs  yaml.rs
src/parser/: mod.rs
src/prompts/: mod.rs
templates/: blue_cross_analysis.md  quick_review.md  rt_a_single_op.md  rt_b_multi_op.md  rt_c_data_integrity.md  rt_d_auth_boundary.md
templates/packs/: axum-pms.md  beds24.md  laravel.md
tests/: dedup_test.rs  diff_test.rs  extract_php_test.rs  extract_rust_test.rs  health_test.rs  p1_schema_upgrade.rs  parser_test.rs  self_analysis_test.rs
tests/fixtures/: sample_migration.php  sample_rt_output.md  sample_rt_output_varied.md  sample_service.php  sample_service.py  sample_service.rs  sample_service.ts
