[package]
name = "refine-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Structural change impact analyzer via MCP — tree-sitter powered diff, blast radius, and code health"
license = "MIT OR Apache-2.0"
keywords = ["mcp", "code-analysis", "tree-sitter", "structural-diff", "code-health"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lib]
name = "refine_mcp"
path = "src/lib.rs"

[[bin]]
name = "refine-mcp"
path = "src/main.rs"

[dependencies]
# MCP protocol
rmcp = { version = "0.16", features = ["server", "transport-io"] }

# tree-sitter (0.25+ supports grammar version 15)
tree-sitter = "0.25"
tree-sitter-php = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"

# Serialization & Schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex (for fact extraction patterns)
regex = "1"
strsim = "0.11.1"
time = { version = "0.3.45", features = ["macros"] }

[dev-dependencies]
tempfile = "3"
